<resources>
    <string name="app_name">Problem Solver</string>
    <string name="empty_list_title">
        Hello my friend!
        This application will help you solve various problems that arise in your life.
        Please add a new problem that needs to be resolved.
    </string>

    <string name="add_new_suspect">Add suspect</string>
    <string name="menu_title_new_problem">New problem</string>
    <string name="problem_title_label">Title</string>
    <string name="problem_title_hint">Enter a description of the problem</string>
    <string name="problem_details_label">Details</string>
    <string name="waiting_radio_text">Waiting</string>
    <string name="solved_radio_text">Solved</string>
    <string name="failed_radio_text">Failed</string>
    <string name="choose_suspect">choose</string>
    <string name="problem_report_text">Send Report</string>
    <string name="call_the_suspect_button">Call the suspect</string>

    <string name="state_problem_waiting">The problem awaits solution.</string>
    <string name="state_problem_solved">Problem solved.</string>
    <string name="state_problem_failed">Problem solution failed.</string>
    <string name="problem_report_no_suspect">No suspect.</string>
    <string name="problem_report_suspect">"This suspect is %s."</string>

    <string name="problem_report">%1$s!
        The problem was resolved on %2$s. %3$s %4$s
    </string>

    <string name="no_permissions">Permission denied...</string>
    <string name="problem_report_subject">ProblemSolver Report</string>
    <string name="send_report_using">Send report using</string>
    <string name="suspect_label">Suspect:</string>


    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>
    <string name="remove_text_popupmenu">Remove</string>
    <string name="have_permissions">You can now use the camera. Click on the button and see the result!</string>
    <string name="title_photo_dialog">Your photo for proof</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="toast_no_photo">Нou haven\'t taken a photo yet</string>
    <string name="confirmation">Confirmation</string>
    <string name="text_query_on_delete_problem">Are you sure you want to remove this problem from the list</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
</resources>